--- a/manifest.json
+++ b/manifest.json
@@ -26,5 +26,14 @@
         "48": "/images/get_started48.png",
         "128": "/images/get_started128.png"
     },
-    "options_page": "options.html"
+    "options_page": "options.html",
+    "commands": {
+        "_execute_action": {
+          "suggested_key": {
+            "default": "Ctrl+Shift+F",
+            "mac": "MacCtrl+Shift+F"
+          },
+          "description": "Opens color picker"
+        }
+      }
 }
